Fixed Spacing between divs

--- a/assets/css/plannerDesign.css
+++ b/assets/css/plannerDesign.css
@@ -12,13 +12,14 @@ table {
 i {
     color: red;
 }
-#pageContent {
-    margin-top: 10px;
-}
 
 #pageContent span {
     width: 125px;
     text-align: center;
+}
+
+#todoList {
+    margin-top: 10px;
 }
 
 #todoTable {
